--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -12,11 +12,11 @@
             <div class="my_socials">
                 {{ range $key, $val := .Site.Social }}
                 {{ if ne $val "" }}
-                <a href="{{ $val }}" title="{{ $key }}" target="_blank"><i class="ri-{{ $key }}-fill"></i></a>
+                <a href="{{ $val }}" title="{{ $key }}" target="_blank"><i class="ri-{{ $key }}-line"></i></a>
                 {{ end }}
                 {{ end }}
                 <a href="{{ .Site.RSSLink }}" type="application/rss+xml" title="rss" target="_blank"><i
-                        class="ri-rss-fill"></i></a>
+                        class="ri-rss-line"></i></a>
             </div>
         </div>
     </div>
